Support existing shortcut paths

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                     <div class="form-group">
                         <div class="checkbox-group">
-                            <input type="checkbox" id="showComputerName" checked onchange="updatePreview()">
+                            <input type="checkbox" id="showComputerName" onchange="updatePreview()">
                             <label for="showComputerName">Show computer name</label>
                         </div>
                     </div>
