--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="template-import" aria-label="Import existing start page">
                         <label for="importFile" class="btn btn-secondary btn-sm" style="cursor: pointer;">
                             Import Existing Start Page
-                            <input type="file" id="importFile" accept=".html,text/html" onchange="importStartPage(this)" class="visually-hidden">
+                            <input type="file" id="importFile" accept=".html,.htm" onchange="importStartPage(this)" class="visually-hidden">
                         </label>
                         <p class="template-import-note">Load a previously generated start page to edit.</p>
                     </div>
